# ClientScripting

./: .gitignore  CMakeLists.txt  Scripting.cpp  Scripting.rar  main.cpp  test.lys
fs/: filereader.hpp  pathreader.hpp
interpreter/: Eval.hpp  symbolTable.hpp  visitor.cpp  visitor.hpp
tokenizer/: tokenizer.cpp  tokenizer.hpp
tokenizer/parser/: nodes.hpp  parser.cpp  parser.hpp
tokenizer/token/: token.hpp  tokenState.hpp  tokenType.hpp
utils/: utils.cpp  utils.hpp
